schema don path fini

--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -219,22 +219,21 @@
             <div class="delta deltaSang">
                 <div class="link"></div>
                 <div class="horizontal">
-                    <div class="horizontalLink"></div>
-                    <div class="horizontalLink"></div>
-                    <div class="horizontalLink"></div>
+                    <div class="horizontalLink horizontalLinkLeft"></div>
+                    <div class="horizontalLink horizontalLinkRight"></div>
                 </div>
             </div>
             <div class="triple tripleLink">
-                <div class="link"></div>
-                <div class="link"></div>
-                <div class="link"></div>
+                <div class="link leftLink"></div>
+                <div class="link middleLink"></div>
+                <div class="link rightLink"></div>
             </div>
             <div class="triple tripleItem">
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
                     <h2>Cellules souches hématopoïétiques</h2>
                 </div>
-                <div class="item">
+                <div class="item itemMiddle">
                     <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
                     <h2>Cellules immunitaires</h2>
                 </div>
@@ -249,18 +248,18 @@
                 <div class="link"></div>
                 <div class="horizontalLink"></div>
             </div>
-            <div class="delta">
+            <div class="delta deltaCordon">
                 <div class="link"></div>
                 <div class="horizontal">
-                    <div class="horizontalLink"></div>
-                    <div class="horizontalLink"></div>
+                    <div class="horizontalLink horizontalLinkLeft"></div>
+                    <div class="horizontalLink horizontalLinkRight"></div>
                 </div>
             </div>
-            <div class="double">
-                <div class="link"></div>
-                <div class="link"></div>
+            <div class="double doubleLink">
+                <div class="link leftLink"></div>
+                <div class="link rightLink"></div>
             </div>
-            <div class="double">
+            <div class="double doubleItem">
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
                     <h2>Cellules souches mésenchymateuses</h2>
