--- a/assets/styles/cestQuoi.scss
+++ b/assets/styles/cestQuoi.scss
@@ -209,6 +209,7 @@ $horizontalLinkLength: 210px;
             position: relative;
             top: 18px;
             z-index: 1;
+            background-color: $pastel;
         }
     }
     .node{
@@ -254,7 +255,9 @@ $horizontalLinkLength: 210px;
     .delta{
         .link{
             margin-top: -18px;
+            margin-bottom: -18px;
             background-color: $pastel;
+            z-index: 1;
         }
         .horizontal{
             display: flex;
@@ -292,6 +295,13 @@ $horizontalLinkLength: 210px;
             .itemRight{
                 position: relative;
                 left: 91px;
+            }
+        }
+        .delta{
+            .horizontal{
+                .horizontalLinkLeft, .horizontalLinkRight{
+                    width: calc(1.5*#{$horizontalLinkLength});
+                }
             }
         }
     }
