--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -232,14 +232,17 @@
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
                     <h2>Cellules souches hématopoïétiques</h2>
+                    <div class="textItem"><h2>Développement de vaccins et de biothérapies</h2></div>
                 </div>
                 <div class="item itemMiddle">
                     <img class="icon" src={{ asset ('img/icons/serum.svg')}}>
                     <h2>Cellules immunitaires</h2>
+                    <div class="textItem"><h2>Traitements innovants du cancer</h2></div>
                 </div>
                 <div class="item itemRight">
                     <img class="icon" src={{ asset ('img/icons/blood-transfusion.svg')}}>
                     <h2>Sérum/Plasma</h2>
+                    <div class="textItem"><h2>Additifs de cultures cellulaires, remplacement de produits d'origine animale</h2></div>
                 </div>
             </div>
         </div>
@@ -263,10 +266,12 @@
                 <div class="item itemLeft">
                     <img class="icon" src={{ asset ('img/icons/cellule-sanguine.svg')}}>
                     <h2>Cellules souches mésenchymateuses</h2>
+                    <div class="textItem"><h2>Thérapies cellulaires / reconstructions tissulaires</h2></div>
                 </div>
                 <div class="item itemRight">
                     <img class="icon" src={{ asset ('img/icons/blood-cells.svg')}}>
                     <h2>Cellules endothéliales</h2>
+                    <div class="textItem"><h2>Tests cellulaires in vitro</h2></div>
                 </div>
             </div>
         </div>
