ajout lettre info

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
             <div class="HeaderTopRight">
                 <a href={{ asset ('pdf/Consentement.pdf')}} target="_blank" rel="noopener noreferrer">Formulaire de consentement</a>
                 <br>
-                <a href="" target="_blank" rel="noopener noreferrer">Lettre d’information</a>
+                <a href={{ asset ('pdf/lettreInformation.pdf')}} target="_blank" rel="noopener noreferrer">Lettre d’information</a>
                 
             </div>
             <a href="/" id="logo"><img src={{asset ('img/logo.png')}}></a>
