test banner et correction

--- a/templates/pages/CestQuoi.html.twig
+++ b/templates/pages/CestQuoi.html.twig
@@ -11,17 +11,17 @@
 {% block body %}
     <h1>Qu'est-ce que le don de sang de cordon ?</h1>
     <p class="pageTitle TwoColumnsText">Le sang de cordon provient du placenta (d’où l’appellation également rencontrée de « sang placentaire »), il s’agit du sang se trouvant dans le cordon ombilical. Ce sang est particulièrement riche en <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
     - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
     - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+    -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
     <br><br>
     -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
     <br><br> 
@@ -148,17 +148,17 @@
         Le sang de cordon est utilisé pour produire : 
         <ul class="prodSang TwoColumnsText">
             <li>des cellules souches <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
-            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
             <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
             <br><br><br>
             - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
-            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
             <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
             <br><br><br>
             - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br><br>
-            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+            -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
             <br><br><br>
             -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
             <br><br><br>
