test banner et correction

--- a/templates/pages/Comment.html.twig
+++ b/templates/pages/Comment.html.twig
@@ -100,7 +100,7 @@
         <div class="devenir tooltipGeant">
             <img class="icon" src={{ asset ('img/icons/delivery-truck.svg')}}>
             <h2>Transfert sous 24h à l'EFS-BFC</h2>
-            <span class="tooltipGeantText">Les dons sont livrées à l’EFS-BFC dans des caisses de transport scéllées. Le transporteur n’a donc pas accès aux données personnelles associées aux dons.
+            <span class="tooltipGeantText">Les dons sont livrés à l’EFS-BFC dans des caisses de transport scéllées. Le transporteur n’a donc pas accès aux données personnelles associées aux dons.
             </span>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x"></i>
@@ -114,7 +114,7 @@
         <div class="devenir tooltipGeant">
             <img class="icon" src={{ asset ('img/icons/test-tube.svg')}}>
             <h2>Analyse du sang de la maman</h2>
-            <span class="tooltipGeantText">En cas de marqueur biologique positif, vous en êtes avertie et le don est détruit. Lymphobank vous adresse, via l’EFS-BFC, un certificat de destruction.
+            <span class="tooltipGeantText">En cas de marqueur biologique positif, vous en êtes avertie et le don est détruit. Lymphobank adresse à l'EFS-BFC un certificat de destruction.
             </span>
         </div>
         <i class="fas fa-long-arrow-alt-right fa-4x"></i>
