--- a/templates/pages/Pourquoi.html.twig
+++ b/templates/pages/Pourquoi.html.twig
@@ -14,17 +14,17 @@
     <button class="accordion"><p class="accordionTitle">1.  Sauver des vies</p></button>
     <div class="panel">
         <img class="illustrationAccordeon" src={{ asset ('img/Vie.jpeg')}}><p class="TwoColumnsText">On compte environ <span class="underline">2000 personnes</span> qui, chaque année, ont besoin d’une <span class="tooltip">greffe <span class="tooltipText">La greffe de cellules souches hématopoïétiques issues du sang de cordon ombilical est une alternative à la greffe de moelle osseuse, qui permet de traiter diverses maladies du sang. Il s’agit d’une source différente de cellules souches qui présente les mêmes spécificités et est moins invasive (prélèvement indolore) que le don de moelle osseuse et qui conduit à une meilleure tolérance du receveur, réduisant ainsi le risque d’effets secondaires indésirables.</span></span> de <span class="tooltip">cellules <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
         <br><br>
         -  Globules blancs :ils assurent la défense du corps contre les virus et les bactéries
         <br><br> 
         - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">souches <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
         <br><br>
         -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
         <br><br> 
         - Plaquettes : elles aident le sang à coaguler</span></span> <span class="tooltip">hématopoïétiques <span class="tooltipText">Les cellules souches hématopoïétiques sont à l’origine de la production de cellules sanguines : <br><br>
-        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissues et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
+        -  Globules rouges : ils transportent l’oxygène des poumons vers les tissus et récupèrent le gaz carbonique afin de l’évacuer lors de l’expiration
         <br><br>
         -  Globules blancs : ils assurent la défense du corps contre les virus et les bactéries
         <br><br> 
@@ -90,7 +90,7 @@
         De même, les utilisateurs finaux, à qui les éléments issus de votre don seront cédés par Lymphobank, s’engagent contractuellement à :
         <ul class="ethique">
         <li>à ne pas exporter ni recéder les produits issus d'éléments du corps humain cédés par Lymphobank à une tierce partie, que ce soit à titre gracieux ou à titre onéreux</li>
-        <li>à utiliser les produits issus d'éléments du corps humain cédés par Lymphobank pour un usage de re-cherche uniquement et dans les domaines d'activités listés ci-dessus</li>
+        <li>à utiliser les produits issus d'éléments du corps humain cédés par Lymphobank pour un usage de recherche uniquement et dans les domaines d'activité suivants: Immunologie, hématologie, Immunothérapie & thérapies innovantes, Oncologie, Vaccins & maladies infectieuses, Cardio-vasculaire, Inflammation, Diabète, Métabolisme, nutrition, physiopathologie, Pneumologie, Hépato-digestif, Dermatologie, Neurosciences, Maladies rares.</li>
         <li>à avoir effectué les démarches réglementaires nécessaires à la réalisation de ses activités, notamment de déclaration ou d'autorisation préalable</li>
         </ul>
         
