--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -81,7 +81,7 @@
     <ul class="equipe">
         <li><strong>Marine DANGEVILLE :</strong> Responsable de production</li>
         <li><strong>Lucie LAURENT </strong>: Technicienne de production en Biotechnologie</li>
-        <li><strong>Mathieu GONCALVES :</strong> Responsable Recherche &développement</li>
+        <li><strong>Mathieu GONCALVES :</strong> Responsable Recherche & Développement</li>
         <li><strong>Eric ROBINET :</strong> Direction</li>
         <li><strong>Satya LEFRANC :</strong> Technicienne de production en Biotechnologie</li>
     </ul>
