--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -17,7 +17,7 @@
 
 {% block body %}
     
-    <img class="homeBanner" src={{ asset ('img/2Banner.png')}}>
+    <img class="homeBanner" src={{ asset ('img/homebanner.png')}}>
     
     <div class="content">
         <h1 class="homeTitle">Soutenez la recherche biomédicale par votre don de sang de cordon.</h1>
