--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
     <h1>Nous contacter</h1>
     <p>Page en cours de création</p>
-    <div class="form">
+    {# <div class="form">
         {{form_start (form)}}
             {{form_row (form.firstName)}}
             {{form_row (form.lastName)}}
@@ -19,7 +19,7 @@
             {{form_row (form.message)}}
             <button class="submit">Envoyer</button>
         {{form_end (form)}}
-    </div>
+    </div> #}
     
 {% endblock %}
 
