traitement mail (marche en local)

--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -2,9 +2,9 @@
   <mj-body>
     <mj-section>
       <mj-column>
-        {{contact.prenom}}
-        {{contact.nom}}
-        {{contact.email}}
+        {{contact.firstname}}
+        {{contact.lastname}}
+        {{contact.mail}}
         {{contact.message|nl2br}}
       </mj-column>
     </mj-section>
