debut photo partenaire

--- a/templates/admin/etablissements/EditEtablissement.html.twig
+++ b/templates/admin/etablissements/EditEtablissement.html.twig
@@ -8,6 +8,11 @@
 {% block body %}
     <div class="container mt-4">
         <h1>Modifier les informations de l'établissement</h1>
+        {% if etablissement.filename %}
+            <img class="imgSelect" src={{ vich_uploader_asset(etablissement, 'imageFile')}}>
+        {% else %}
+            <p>Pas de photo enregistrée</p>
+        {% endif %}
         {{ include ("admin/etablissements/FormEtablissement.html.twig", {form: form, button: 'Enregistrer'}) }}
     </div>
 
